--- a/template.yaml
+++ b/template.yaml
@@ -26,6 +26,8 @@ Resources:
       Targets:
         S3Targets:
           - Path: "s3://s3lab4in-shubham121/"
+            Exclusions:
+              - "scripts/*"  # Exclude the scripts folder
       TablePrefix: in_
     DependsOn: GlueDatabase
 
